welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:9: error: 'while' expected but '}' found.
    } while(!estSurBiscuit){
    ^DwarfCode:9: error: ';' expected but 'while' found.
    } while(!estSurBiscuit){
      ^